--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://g2ccontabilidade.app.questorpublico.com.br
-TOKEN=2be9472b4669f32f8efe24a4730ca906
+API_URL=https://g2ccontabilidade.app.questorpublico.com.br
+API_TOKEN=2be9472b4669f32f8efe24a4730ca906
